<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtContactsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contacts_header"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnContact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact1_name"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:padding="16dp" />

    <Button
        android:id="@+id/btnContact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact2_name"
        android:textSize="24sp"
        android:padding="16dp" />

</LinearLayout>
